# pm-tui

./: .gitignore  README.md  ctx.md  go.mod  go.sum  loaders.go  main.go  update.go  view.go
package_manager/: PackageManager.go  apt.go  npm.go  pacman.go  pip.go  poetry.go  utils.go  yay.go
tests/arch/: Dockerfile
tests/npm/: Dockerfile  package-lock.json  package.json
tests/pip/: pyproject.toml
tests/python/pip/: Dockerfile
tests/python/poetry/: Dockerfile  pyproject.toml
tests/ubuntu/: Dockerfile
utils/: logger_dev.go  logger_prod.go  style.go  types.go  utils.go
views/: info.go  list.go  search.go
