[project]
name = "py"
version = "0.1.0"
description = ""
authors = [
    {name = "alexander.popov",email = "alexander.popov233@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "panda (>=0.3.1,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
